--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "ts-node --project scripts/tsconfig.json scripts/migrations/index.ts",
-    "migrate:create": "ts-node --project scripts/tsconfig.json scripts/migrations/create.ts",
-    "db:seed": "ts-node --project scripts/tsconfig.json scripts/seeders/index.ts",
-    "db:reset": "ts-node --project scripts/tsconfig.json scripts/reset-db.ts",
-    "db:fresh": "npm run db:reset && npm run migrate && npm run db:seed",
-    "roles:setup": "ts-node --project scripts/tsconfig.json scripts/setup-role-system.ts",
-    "roles:permissions": "ts-node --project scripts/tsconfig.json scripts/seeders/systemPermissionsSeeder.ts",
-    "roles:system": "ts-node --project scripts/tsconfig.json scripts/seeders/systemRolesSeeder.ts",
-    "roles:migrate": "ts-node --project scripts/tsconfig.json scripts/migrations/migrate-users-to-roles.ts",
+    "migrate": "ts-node --project scripts/tsconfig.json scripts/setup.ts --migrate",
+    "seed": "ts-node --project scripts/tsconfig.json scripts/setup.ts --seed",
+    "reset": "ts-node --project scripts/tsconfig.json scripts/setup.ts --reset",
+    "setup": "ts-node --project scripts/tsconfig.json scripts/setup.ts --all",
+    "migrate:new": "ts-node --project scripts/tsconfig.json scripts/setup.ts --migrate-new",
+    "seed:single": "ts-node --project scripts/tsconfig.json scripts/setup.ts --seed-single",
+    "setup:status": "ts-node --project scripts/tsconfig.json scripts/setup.ts --status",
+    "setup:generate": "ts-node --project scripts/tsconfig.json scripts/setup.ts --generate-only",
     "channels:init": "ts-node --project scripts/tsconfig.json scripts/initialize-channels.ts"
   },
   "dependencies": {
