--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "mongodb": "6.12.0",
     "mongoose": "8.18.1",
     "multer": "^2.0.2",
-    "next": "^16.0.3",
+    "next": "16.0.7",
     "next-auth": "4.24.11",
     "next-themes": "0.4.6",
     "otplib": "^8.0.0",
