--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "3.10.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -118,6 +120,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "22.10.2",
     "@types/otplib": "^7.0.0",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
     "@types/xlsx": "^0.0.35",
