--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "1.2.1",
     "@radix-ui/react-select": "^2.2.6",
@@ -65,6 +66,7 @@
     "@tiptap/extension-italic": "^3.10.1",
     "@tiptap/extension-link": "^3.10.1",
     "@tiptap/extension-list-item": "^3.10.1",
+    "@tiptap/extension-mention": "^3.14.0",
     "@tiptap/extension-ordered-list": "^3.10.1",
     "@tiptap/extension-paragraph": "^3.10.1",
     "@tiptap/extension-strike": "^3.10.1",
@@ -73,6 +75,7 @@
     "@tiptap/extension-text-style": "^3.10.1",
     "@tiptap/react": "^3.10.1",
     "@tiptap/starter-kit": "^3.10.1",
+    "@tiptap/suggestion": "^3.14.0",
     "@types/express-rate-limit": "^5.1.3",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.1",
