--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@tiptap/extension-italic": "^3.10.1",
     "@tiptap/extension-link": "^3.10.1",
     "@tiptap/extension-list-item": "^3.10.1",
+    "@tiptap/extension-mention": "^3.14.0",
     "@tiptap/extension-ordered-list": "^3.10.1",
     "@tiptap/extension-paragraph": "^3.10.1",
     "@tiptap/extension-strike": "^3.10.1",
@@ -73,6 +74,7 @@
     "@tiptap/extension-text-style": "^3.10.1",
     "@tiptap/react": "^3.10.1",
     "@tiptap/starter-kit": "^3.10.1",
+    "@tiptap/suggestion": "^3.14.0",
     "@types/express-rate-limit": "^5.1.3",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.1",
