--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "set NODE_OPTIONS=--max-http-header-size=65536 && next dev --turbo",
     "build": "prisma generate && next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
