--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "@aws-sdk/s3-request-presigner": "^3.928.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "3.10.0",
-    "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -66,7 +64,6 @@
     "@tiptap/extension-italic": "^3.10.1",
     "@tiptap/extension-link": "^3.10.1",
     "@tiptap/extension-list-item": "^3.10.1",
-    "@tiptap/extension-mention": "^3.14.0",
     "@tiptap/extension-ordered-list": "^3.10.1",
     "@tiptap/extension-paragraph": "^3.10.1",
     "@tiptap/extension-strike": "^3.10.1",
@@ -74,19 +71,15 @@
     "@tiptap/extension-text-align": "^3.10.1",
     "@tiptap/extension-text-style": "^3.10.1",
     "@tiptap/react": "^3.10.1",
-    "@tiptap/starter-kit": "^3.10.1",
-    "@tiptap/suggestion": "^3.14.0",
-    "@types/express-rate-limit": "^5.1.3",
+    "@sentry/nextjs": "^8.0.0",
+    "@tiptap/core": "^3.10.1",
+    "@tiptap/extension-hard-break": "^3.10.1",
+    "dompurify": "^3.0.0",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
-    "express-rate-limit": "^8.1.0",
-    "express-validator": "^7.2.1",
     "file-saver": "^2.0.5",
-    "helmet": "^8.1.0",
-    "jose": "5.9.6",
-    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "0.544.0",
@@ -104,7 +97,6 @@
     "react-hook-form": "7.54.2",
     "react-redux": "9.1.2",
     "recharts": "2.13.3",
-    "redis": "^5.8.3",
     "redux-persist": "6.0.0",
     "sweetalert2": "^11.23.0",
     "tailwind-merge": "3.3.1",
@@ -118,7 +110,6 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/file-saver": "^2.0.7",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/jspdf": "^1.3.3",
     "@types/multer": "^2.0.0",
     "@types/node": "22.10.2",
@@ -127,13 +118,9 @@
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
     "@types/xlsx": "^0.0.35",
-    "autoprefixer": "10.4.20",
-    "critters": "^0.0.23",
     "dotenv": "^17.2.2",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
-    "ignore-loader": "^0.1.2",
-    "postcss": "8.5.1",
     "prisma": "^7.2.0",
     "tailwindcss": "3.4.17",
     "ts-node": "^10.9.2",
