--- a/package.json
+++ b/package.json
@@ -51,14 +51,17 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@reduxjs/toolkit": "2.9.0",
+    "@sentry/nextjs": "^8.0.0",
     "@supabase/supabase-js": "^2.88.0",
     "@tanstack/react-query": "^5.90.5",
+    "@tiptap/core": "^3.10.1",
     "@tiptap/extension-blockquote": "^3.10.1",
     "@tiptap/extension-bold": "^3.10.1",
     "@tiptap/extension-bullet-list": "^3.10.1",
     "@tiptap/extension-code-block": "^3.10.1",
     "@tiptap/extension-color": "^3.10.1",
     "@tiptap/extension-document": "^3.10.1",
+    "@tiptap/extension-hard-break": "^3.10.1",
     "@tiptap/extension-heading": "^3.10.1",
     "@tiptap/extension-history": "^3.10.1",
     "@tiptap/extension-italic": "^3.10.1",
@@ -71,14 +74,11 @@
     "@tiptap/extension-text-align": "^3.10.1",
     "@tiptap/extension-text-style": "^3.10.1",
     "@tiptap/react": "^3.10.1",
-    "@sentry/nextjs": "^8.0.0",
-    "@tiptap/core": "^3.10.1",
-    "@tiptap/extension-hard-break": "^3.10.1",
-    "dompurify": "^3.0.0",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
+    "dompurify": "^3.0.0",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
@@ -91,6 +91,10 @@
     "next-themes": "0.4.6",
     "otplib": "^8.0.0",
     "pg": "^8.16.3",
+    "prosemirror-model": "^1.25.4",
+    "prosemirror-state": "^1.4.4",
+    "prosemirror-transform": "^1.10.5",
+    "prosemirror-view": "^1.41.4",
     "rate-limiter-flexible": "^7.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -118,9 +122,11 @@
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
     "@types/xlsx": "^0.0.35",
+    "autoprefixer": "^10.4.23",
     "dotenv": "^17.2.2",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
+    "postcss": "^8.5.6",
     "prisma": "^7.2.0",
     "tailwindcss": "3.4.17",
     "ts-node": "^10.9.2",
