--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@aws-sdk/s3-request-presigner": "^3.928.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "3.10.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -51,22 +53,20 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@reduxjs/toolkit": "2.9.0",
-    "@sentry/nextjs": "^8.0.0",
     "@supabase/supabase-js": "^2.88.0",
     "@tanstack/react-query": "^5.90.5",
-    "@tiptap/core": "^3.10.1",
     "@tiptap/extension-blockquote": "^3.10.1",
     "@tiptap/extension-bold": "^3.10.1",
     "@tiptap/extension-bullet-list": "^3.10.1",
     "@tiptap/extension-code-block": "^3.10.1",
     "@tiptap/extension-color": "^3.10.1",
     "@tiptap/extension-document": "^3.10.1",
-    "@tiptap/extension-hard-break": "^3.10.1",
     "@tiptap/extension-heading": "^3.10.1",
     "@tiptap/extension-history": "^3.10.1",
     "@tiptap/extension-italic": "^3.10.1",
     "@tiptap/extension-link": "^3.10.1",
     "@tiptap/extension-list-item": "^3.10.1",
+    "@tiptap/extension-mention": "^3.14.0",
     "@tiptap/extension-ordered-list": "^3.10.1",
     "@tiptap/extension-paragraph": "^3.10.1",
     "@tiptap/extension-strike": "^3.10.1",
@@ -74,12 +74,19 @@
     "@tiptap/extension-text-align": "^3.10.1",
     "@tiptap/extension-text-style": "^3.10.1",
     "@tiptap/react": "^3.10.1",
+    "@tiptap/starter-kit": "^3.10.1",
+    "@tiptap/suggestion": "^3.14.0",
+    "@types/express-rate-limit": "^5.1.3",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
-    "dompurify": "^3.0.0",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
     "file-saver": "^2.0.5",
+    "helmet": "^8.1.0",
+    "jose": "5.9.6",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "0.544.0",
@@ -91,16 +98,13 @@
     "next-themes": "0.4.6",
     "otplib": "^8.0.0",
     "pg": "^8.16.3",
-    "prosemirror-model": "^1.25.4",
-    "prosemirror-state": "^1.4.4",
-    "prosemirror-transform": "^1.10.5",
-    "prosemirror-view": "^1.41.4",
     "rate-limiter-flexible": "^7.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "7.54.2",
     "react-redux": "9.1.2",
     "recharts": "2.13.3",
+    "redis": "^5.8.3",
     "redux-persist": "6.0.0",
     "sweetalert2": "^11.23.0",
     "tailwind-merge": "3.3.1",
@@ -114,6 +118,7 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/file-saver": "^2.0.7",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/jspdf": "^1.3.3",
     "@types/multer": "^2.0.0",
     "@types/node": "22.10.2",
@@ -122,11 +127,13 @@
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
     "@types/xlsx": "^0.0.35",
-    "autoprefixer": "^10.4.23",
+    "autoprefixer": "10.4.20",
+    "critters": "^0.0.23",
     "dotenv": "^17.2.2",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
-    "postcss": "^8.5.6",
+    "ignore-loader": "^0.1.2",
+    "postcss": "8.5.1",
     "prisma": "^7.2.0",
     "tailwindcss": "3.4.17",
     "ts-node": "^10.9.2",
